add_library(engine)
target_include_directories(engine
	PUBLIC
	"${CMAKE_CURRENT_LIST_DIR}"
)
target_sources(engine
	PUBLIC
	"${CMAKE_CURRENT_LIST_DIR}/GameEngine.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/GameElementFactory.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/GameObjectScheduler.cpp"
	"${CMAKE_CURRENT_LIST_DIR}/VideoRenderer.cpp"
)
